add basic questions

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,12 @@
 
     <p> Welcome message </p>
 
+    {% if not current_user.is_anonymous %}
+    <a href="{{ url_for('instructions') }}" > Start!</a>
+    {%endif%}
+
+    <hr>
+
     {% if current_user.is_anonymous %}
     <a href="{{ url_for('register') }}" > New participant </a>
     <a href="{{ url_for('login') }}">Returning participant</a>
