add goldmsi skeleton

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -23,6 +23,10 @@
 
         <p>{{ form.submit() }}</p>
     </form>
+    <br>
+
+    <a href="{{ url_for('music_background') }}">Change music background answers</a>
+
     {% endif %}
 
 
