--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
         <a href="{{ url_for('index') }}">Home</a>
         {% if current_user.is_anonymous %}
         <a href="{{ url_for('login') }}">Log In</a>
-        <a href="{{ url_for('login') }}">Sign In</a>
+        <a href="{{ url_for('register') }}">Sign In</a>
         {% else %}
         <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
         <a href="{{ url_for('logout') }}">Logout</a>
