--- a/app/templates/question.html
+++ b/app/templates/question.html
@@ -2,6 +2,17 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+    {% if not current_user.gold_msi_completed %}
+    <h1> {{current_user.username}}, you did not tell us about your musical background ! </h1>
+
+    <p> Please do so by clicking on the link below</p>
+    <br>
+
+    <a href="{{ url_for('music_background') }}" > Music Background Questionaire</a>
+
+    {% else %}
+
     <h1>Question {{number}}</h1>
 
     <h2>{{question.id}} {{question.example}} {{question.system1}} {{question.system2}} </h2>
@@ -21,4 +32,7 @@
         <p>{{ form.submit() }}</p>
 
     </form>
+
+    {% endif %}
+
 {% endblock %}
