--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -8,7 +8,17 @@
 
     {% if user.last_seen %}<p>Last seen on: {{ user.last_seen }}</p>{% endif %}
 
+    Questions answered: Total {{user.number_answers()}}
+    <ul>
+      {% for question in user.answered_questions() %}
+      <li> {{question}}
+      {% endfor %}
+    </ul>
+
+
     <hr>
+
+
 
     {% if user == current_user %}
     <form action="" method="post">
