--- a/app/templates/question.html
+++ b/app/templates/question.html
@@ -15,16 +15,27 @@
 
     <h1>Question {{number}}</h1>
 
-    <h2>{{question.id}} {{question.example}} {{question.system1}} {{question.system2}} </h2>
+    <form action="" method="post" novalidate>
+    <h2>Reference:</h2>
+    <audio src="{{url_for('static',filename=filepaths[0])}}" controls></audio>
+    {{ form.known() }} {{ form.known.label }}
 
     <p> What do you prefer ? </p>
 
-    <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
+          <table>
+          <tr>
+            <td>  <audio src="{{url_for('static',filename=filepaths[1])}}" controls></audio> </td>
+            <td>  <audio src="{{url_for('static',filename=filepaths[2])}}" controls></audio> </td>
+          </tr>
+          <tr>
           {% for subfield in form.choice %}
-            {{subfield.label}}{{subfield}}
+            <td>{{subfield}}</td>
           {% endfor %}
+          </tr>
+          </table>
+
           {% for error in form.choice.errors %}
           <span style="color: red;">[{{ error }}]</span>
           {% endfor %}
