--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -2,6 +2,11 @@
 
 {% block content %}
     <h1>New participant</h1>
+
+    <p> Please choose a user name. Choose a memorable name, it will be required
+      if you wish to log back into the system.
+    </p>
+
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
