--- a/app/templates/consent.html
+++ b/app/templates/consent.html
@@ -1,7 +1,7 @@
 
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
     <h1>Before going any further, we need your consent</h1>
 
     <p>
