--- a/app/templates/music_background.html
+++ b/app/templates/music_background.html
@@ -1,7 +1,7 @@
 
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
     <h1>Tell us about your music background</h1>
 
     <h2>Do not worry, you do not have to be a musician to take part in this study!</h2>
