--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
     <h1>An unexpected error has occurred</h1>
     <p>Please contact the administrator (Adrien Ycart)</p>
-    <p><a href="{{ url_for('index') }}">Back</a></p>
+    <p> <a class="btn btn-primary" role="button"  href="{{ url_for('index') }}">Back</a></p>
 {% endblock %}
