--- a/app/templates/instructions.html
+++ b/app/templates/instructions.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
 
   {%if not current_user.ethics_approved %}
     <h1> {{current_user.username}}, you did not give us your consent! </h1>
     <p> Please do so by clicking on the link below</p>
     <br>
-    <a href="{{ url_for('information_sheet') }}" > Information sheet and consent form </a>
+    <a class="btn btn-primary" role="button" href="{{ url_for('information_sheet') }}" > Information sheet and consent form </a>
   {% else %}
 
     {% if not current_user.gold_msi_completed %}
@@ -15,7 +15,7 @@
     <p> Please do so by clicking on the link below</p>
     <br>
 
-    <a href="{{ url_for('music_background') }}" > Music Background Questionaire</a>
+    <a class="btn btn-primary" role="button" href="{{ url_for('music_background') }}" > Music Background Questionaire</a>
 
     {% else %}
 
@@ -32,7 +32,10 @@
     <li> You can stop at any time, any submitted answers will still be recorded.
     <li> We would love to have your feedback! Give us any comments in your profile (link in header).
     </ul>
-    <a href="{{ url_for('question') }}" > Start!</a>
+
+    <a href="{{ url_for('information_sheet') }}" > Want to read the information sheet again?</a><br>
+    <br>
+    <a class="btn btn-primary" role="button" href="{{ url_for('question') }}" > Start!</a>
 
     {% endif %}
   {% endif %}
