--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,19 +1,15 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{% block content %}
+{% block app_content %}
     <h1>Returning participant</h1>
-    <form action="" method="post" novalidate>
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}
-            {% for error in form.username.errors %}<br>
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p>{{ form.submit() }}</p>
+    <div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
 
-        <p>New participant? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+    <hr>
+        <p>New participant? <a class="btn btn-primary" role="button"  href="{{ url_for('register') }}">Click to Register!</a></p>
     </form>
 {% endblock %}
