--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,24 +1,19 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{% block content %}
+{% block app_content %}
     <h1>New participant</h1>
 
     <p> Please choose a user name. Choose a memorable name, it will be required
       if you wish to log back into the system.
     </p>
 
-    <form action="" method="post" novalidate>
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}
-            {% for error in form.username.errors %}<br>
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p>{{ form.submit() }}</p>
+    <div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
 
-        <p>Returning participant? <a href="{{ url_for('login') }}">Click to log in!</a></p>
-    </form>
+    <hr>
+    <p>Returning participant? <a class="btn btn-primary" role="button"  href="{{ url_for('login') }}">Click to log in!</a></p>
 {% endblock %}
