--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -2,7 +2,7 @@
 
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
 
     <h1>User: {{ user.username }}</h1>
 
@@ -45,11 +45,14 @@
     </form>
     <br>
 
-    <a href="{{ url_for('music_background') }}">Change music background answers</a><br>
-    <a href="{{ url_for('information_sheet') }}">See information sheet</a><br>
-    <a href="{{ url_for('consent') }}">See consent form</a><br>
+    <a class="btn btn-primary" role="button" href="{{ url_for('music_background') }}">Change music background answers</a>
+    <a class="btn btn-primary" role="button" href="{{ url_for('information_sheet') }}">See information sheet</a>
+    <a class="btn btn-primary" role="button" href="{{ url_for('consent') }}">See consent form</a>
 
     {% endif %}
+
+    <hr>
+
 
 
 {% endblock %}
