looks slightly better

--- a/app/templates/consent.html
+++ b/app/templates/consent.html
@@ -15,7 +15,7 @@
     <p>
     Thank you for considering taking part in this research.
     Make sure you have read carefully the
-    <a href="{{url_for('information_sheet')}}"> Information Sheet <a> before you agree to take part.
+    <a href="{{url_for('information_sheet')}}"> Information Sheet </a> before you agree to take part.
     If you have any questions arising from the Information Sheet or explanation
     already given to you, please ask the researcher before you decide whether
     to join in. If you are willing to participate in this study, please
