--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -15,5 +15,5 @@
     </div>
 
     <hr>
-    <p>Returning participant? <a class="btn btn-primary" role="button"  href="{{ url_for('login') }}">Click to log in!</a></p>
+    <p>Returning participant? <a class="btn btn-outline-secondary" role="button"  href="{{ url_for('login') }}">Click to log in!</a></p>
 {% endblock %}
