--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,6 +10,6 @@
     </div>
 
     <hr>
-        <p>New participant? <a class="btn btn-primary" role="button"  href="{{ url_for('register') }}">Click to Register!</a></p>
+        <p>New participant? <a class="btn btn-outline-secondary" role="button"  href="{{ url_for('register') }}">Click to Register!</a></p>
     </form>
 {% endblock %}
