--- a/app/templates/question.html
+++ b/app/templates/question.html
@@ -1,5 +1,6 @@
 
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
 
@@ -24,9 +25,17 @@
 
     <form action="" method="post" novalidate>
     <h3>Reference:</h3>
-    <audio src="{{url_for('static',filename=filepaths[0])}}" controls></audio>
 
+    <table class='table-borderless text-center'>
+      <tr>
+      <td>
+    <audio src="{{url_for('static',filename=filepaths[0])}}" controls></audio>
+    </td>
+    <td style="width: 200px;">
     {{ form.known() }} {{ form.known.label }}
+    </td>
+    </tr>
+    </table>
 
     <hr>
 
@@ -34,7 +43,7 @@
 
         {{ form.hidden_tag() }}
         <p>
-          <table>
+          <table class='table-borderless text-center'>
           <tr>
             <td>  <audio src="{{url_for('static',filename=filepaths[1])}}" controls></audio> </td>
             <td>  <audio src="{{url_for('static',filename=filepaths[2])}}" controls></audio> </td>
@@ -47,10 +56,12 @@
           </table>
 
           {% for error in form.choice.errors %}
-          <span style="color: red;">[{{ error }}]</span>
+          <div class="alert alert-danger" role="alert">
+          {{ error }}<br>
+          </div>
           {% endfor %}
         </p>
-        <p>{{ form.submit() }}</p>
+        <p>{{ wtf.form_field(form.submit, button_map={'submit':'primary'}) }}</p>
 
     </form>
 
