nice formatting for last_seen

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -60,3 +60,8 @@
   {% block app_content %}{% endblock %}
 </div>
 {% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    {{ moment.include_moment() }}
+{% endblock %}
