--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -7,7 +7,7 @@
 
     <h1>User: {{ user.username }}</h1>
 
-    {% if user.last_seen %}<p>Last seen on: {{ user.last_seen }}</p>{% endif %}
+    {% if user.last_seen %}<p>Last seen on: {{ moment(user.last_seen).format('LLL') }}</p>{% endif %}
 
     Questions answered: {{user.number_answers()}}
 
