change questions: no reversed order in the database, order is reversed when displaying the examples

--- a/app/templates/question.html
+++ b/app/templates/question.html
@@ -65,6 +65,10 @@
 
     </form>
 
+    {% if debug %}
+    {{filepaths[1]}}, {{filepaths[2]}}
+    {% endif %}
+
     {% endif %}
   {% endif %}
 {% endblock %}
