Info sheet before registering, add info to welcome page, add email address

--- a/app/templates/consent.html
+++ b/app/templates/consent.html
@@ -18,7 +18,7 @@
     Make sure you have read carefully the
     <a href="{{url_for('information_sheet')}}"> Information Sheet </a> before you agree to take part.
     If you have any questions arising from the Information Sheet or explanation
-    already given to you, please ask the researcher before you decide whether
+    already given to you, please ask the researcher (Adrien Ycart, a[dot]ycart[at]qmul[dot]ac[dot]uk) before you decide whether
     to join in. If you are willing to participate in this study, please
     tick the appropriate responses underneath.
     </p>
