--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,10 +12,18 @@
       By taking part, you will help assessing the perceptual quality of some
       automatic music transcription systems.</p>
 
+    <p> You will be asked to compare some automatic transcriptions of some
+      Western classical piano music pieces and choose the one you find most similar
+      to the original piece. You do not need to be a musician to participate!</p>
+
+    <p>
+      If you have any questions, do not hesitate to contact Adrien Ycart (a[dot]ycart[at]qmul[dot]ac[dot]uk).
+    </p>
+
     {% if not current_user.is_anonymous %}
       <p> Whenever you are ready, please click Start. </p>
       {% if not current_user.ethics_approved %}
-      <a class="btn btn-primary" role="button"  href="{{ url_for('information_sheet') }}" > Start!</a>
+      <a class="btn btn-primary" role="button"  href="{{ url_for('consent') }}" > Start!</a>
       {% else %}
         {% if not current_user.gold_msi_completed %}
         <a class="btn btn-primary" role="button"  href="{{ url_for('music_background') }}" > Start!</a>
@@ -27,7 +35,7 @@
     {%else%}
     <p> To start, please log in, or create an account. </p>
     <hr>
-    <a class="btn btn-primary" role="button" href="{{ url_for('register') }}" > New participant </a>
+    <a class="btn btn-primary" role="button" href="{{ url_for('information_sheet') }}" > New participant </a>
     <a class="btn btn-primary" role="button" href="{{ url_for('login') }}">Returning participant</a>
     {%endif%}
 
