--- a/app/templates/information_sheet.html
+++ b/app/templates/information_sheet.html
@@ -56,6 +56,9 @@ or research-ethics@qmul.ac.uk. If you have any questions relating to data
 protection, please contact Data Protection Officer, Queens’ Building, Mile
 End Road, London, E1 4NS or data-protection@qmul.ac.uk
 </p>
+<p>
+You can find this information sheet once you have registered in your "Profile" section (link in the navigation bar)
+</p>
 
 {% if current_user.is_anonymous %}
 <a class="btn btn-primary" role="button"  href="{{url_for('register')}}"> I'm ready to register </a>
