--- a/app/templates/instructions.html
+++ b/app/templates/instructions.html
@@ -25,13 +25,13 @@
 
     <h2> Instructions </h2>
     <ul>
-    <li> Make sure you are in a quiet environment, and you are using good headphones.
-    <li> Make sure the sound volume of your computer is adequate
-    <li> You will be presented with 3 audio examples. Please listen to all three examples before making your decision.
-    <li> Please try to listen to each example only once. We are interested in your overall judgement, not in analytical answers.
-    <li> If you recognise the reference piece, please tick the box "I know this piece".
-    <li> You can stop at any time, any submitted answers will still be recorded.
-    <li> We would love to have your feedback! Give us any comments in your profile (link in header).
+    <li> Make sure you are in a <b>quiet environment</b>, and you are using good headphones.
+    <li> Make sure the <b>sound volume</b> of your computer is adequate
+    <li> You will be presented with 3 audio examples. <b>Please listen to all three examples</b> before making your decision.
+    <li> Please try to listen to each example <b>only once</b>. We are interested in your overall judgement, not in analytical answers.
+    <li> If you recognise the reference piece, please tick the box <b>"I know this piece"</b>.
+    <li> <b>You can stop at any time</b>, any submitted answers will still be recorded.
+    <li> We would love to have your feedback! <b>Give us any comments in your profile</b> (link in header).
     </ul>
 
     <a href="{{ url_for('information_sheet') }}" > Want to read the information sheet again?</a><br>
