--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,8 +14,8 @@
        define better perceptually-grounded evaluation metrics for automatic music transcription!</p>
 
     <p> In this study, you will be asked to compare some automatic transcriptions of some
-      Western classical piano music pieces and choose the one you find most similar
-      to the original piece. You do not need to be a musician to participate!</p>
+      Western classical piano music pieces, rendered as audio, and choose the one you find most similar
+      to the original piece. You do not need to be able to read sheet music, nor to be a musician to participate!</p>
 
 
     {% if not current_user.is_anonymous %}
