save answer time, add difficulty question

--- a/app/templates/instructions.html
+++ b/app/templates/instructions.html
@@ -29,6 +29,7 @@
     <li> Make sure the <b>sound volume</b> of your computer is adequate
     <li> You will be presented with 3 audio examples. <b>Please listen to all three examples</b> before making your decision.
     <li> Please try to listen to each example <b>only once</b>. We are interested in your overall judgement, not in analytical answers.
+    <li> Some questions might be more challenging than others, it is OK to listen to the examples several times in this case.
     <li> If you recognise the reference piece, please tick the box <b>"I know this piece"</b>.
     <li> <b>You can stop at any time</b>, any submitted answers will still be recorded.
     <li> We would love to have your feedback! <b>Give us any comments in your profile</b> (link in header).
